# roguelike-tactical-game

./: .gitignore  Cargo.toml  README.md  action_order.py  ai.py  api_doc_1.md  board.py  card.py  game.py  grid.py  gui.py  main.py  obstacle.py  piece.py  range_matrix.py  roguelite-game-prompt.md  speed.py  speed_bar.py  test_game.py
docs/: AI-PROMPT.md
save-lord/: Cargo.toml  README.md  example-save.json
save-lord/saves/save-lord/: autosave.json  mysave.json  test1.json
save-lord/src/: api.rs  characters.rs  combat.rs  commands.rs  equipment.rs  events.rs  gacha.rs  game.rs  lib.rs  lord.rs  main.rs  map.rs  relics.rs  rng.rs  save.rs  skills.rs  sub_battle.rs  team.rs  types.rs  ui.rs
saves/: round1.json  test1.json  test_smoke.json  turn_3.json
src/: main.rs
src/app/: README.md  frame.rs  game.rs  mod.rs  terminal.rs
src/command/: README.md  parser.rs
src/error/: README.md  types.rs
src/map/: README.md  grid.rs  mod.rs  render.rs
src/save/: README.md  data.rs  manager.rs  mod.rs
