[package]
name = "roguelike-auto-tactics"
version = "0.1.0"
edition = "2021"
description = "拯救领主 Save/Load the Lord - 纯文本指令驱动战术肉鸽"

[dependencies]
serde = { version = "1", features = ["derive"] }
serde_json = "1"
clap = { version = "4", features = ["derive"] }
rand = "0.8"
thiserror = "2"
anyhow = "1"
chrono = { version = "0.4", features = ["serde"] }

[profile.release]
opt-level = 3
lto = true
codegen-units = 1
